--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,11 @@ body {
 
 
 
-.topbar { 
-  padding: 8px 20px;
+.topbar {
+  padding: 20px 20px;
   display: flex;
-  flex-direction: column; /* <-- klucz */
   gap: 16px;
-  align-items: flex-start;
+  align-items: baseline;
   border-bottom: 1px solid #2a2f38;
   flex-wrap: wrap;
   position: relative;
