--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,12 @@ html, body {
 body {
   margin: 0;
   font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-  background: #0f1217;
+  background-color: #0f1217;
+  background-image: url('https://i.imgur.com/l9Lc9RE.jpg');
+  background-repeat: repeat;
+  background-size: 256px 256px;
+  background-position: top left;
+  background-attachment: fixed;
   color: #b9b9b9;
 }
 
